[package]
name = "iai-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
iai = "0.1.1"
#criterion-perf-events = "*"
perfcnt = "*"
rustls = "0.21.5"
rustls-pemfile = "*"


[[bench]]
name = "some_benchmark"
harness = false
